fix(shiki): replace pattern to match new version of shiki + fix scrollbars styles (#811)

--- a/packages/client/styles/code.css
+++ b/packages/client/styles/code.css
@@ -1,13 +1,13 @@
+html.dark:root {
+  color-scheme: dark;
+}
+
 html.dark .shiki-light {
   display: none;
 }
 
 html:not(.dark) .shiki-dark {
   display: none;
-}
-
-::-webkit-scrollbar {
-  width: 0px;
 }
 
 .slidev-code-wrapper {
